--- a/package.json
+++ b/package.json
@@ -11,15 +11,13 @@
   "author": "{{author}}",
   "license": "ISC",
   "devDependencies": {
- 
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/runtime": "^7.4.4",
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
     "autoprefixer": "^9.5.1",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^2.0.2",
     "copy-webpack-plugin": "^5.0.3",
-    "core-js": "^2.6.5",
     "css-loader": "^2.1.1",
     "html-webpack-plugin": "^3.2.0",
     "imagemin-webpack-plugin": "^2.4.2",
@@ -38,7 +36,8 @@
     "webpack-merge": "^4.2.1"
   },
   "dependencies": {
- 
+    "core-js": "^3.2.1",
+    "portfinder": "^1.0.23",
     "vue": "^2.6.10"
   }
 }
