--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "{{name}}",
+  "name": "name",
   "version": "1.0.0",
-  "description": "{{description}}",
+  "description": "description",
   "main": "src/main.js",
   "scripts": {
     "serve": "webpack-dev-server --config build/dev.config.js",
     "build": "webpack --config build/prod.config.js"
   },
   "keywords": [],
-  "author": "{{author}}",
+  "author": "author",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.5.5",
